// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie Reducer should add newly created movies to the state 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": "1",
      "name": "Arrival",
      "rating": 4,
    },
  },
  "ids": Array [
    "1",
  ],
}
`;

exports[`Movie Reducer should apply changes to a movie when a movie is updated 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": "1",
      "name": "Blade Runner (Final Cut)",
      "rating": 4.5,
    },
  },
  "ids": Array [
    "1",
  ],
}
`;

exports[`Movie Reducer should load all movies when the API loads them all successfully 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": "1",
      "name": "Green Lantern",
      "rating": 0,
    },
  },
  "ids": Array [
    "1",
  ],
}
`;

exports[`Movie Reducer should remove movies from the state when they are deleted 1`] = `
Object {
  "entities": Object {},
  "ids": Array [],
}
`;

exports[`Movie Reducer should roll back a deletion if deleting a movie fails 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": "1",
      "name": "Black Panther",
      "rating": 4,
    },
  },
  "ids": Array [
    "1",
  ],
}
`;

exports[`Movie Reducer should rollback changes to a movie if there is an error when updating it with the API 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": "1",
      "name": "Star Wars: A New Hope",
      "rating": 3.5,
    },
  },
  "ids": Array [
    "1",
  ],
}
`;
